--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ Your help and feedback would be greatly appreciated on any of the questions...
 - What tests should be performed?
 
 
-# status quo w/o {ggcirclepack}: precomputation required to two more data frames
+# status quo *without* {ggcirclepack}: precomputation required to create two more data frames
 
 ```{r}
 library(tidyverse)
@@ -101,14 +101,13 @@ filter(year == 2002) %>%
 #' @export
 #'
 #' @examples
-#' # TBD
 compute_panel_circlepack_center <- function(data, scales){
 
   # get aes names as they appear in the data
   data_mapped_aes_names <- names(data)[names(data) %in% 
                                          c("id", "fill", "alpha", 
                                              "colour", "group", "linewidth", 
-                                             "linetype")]
+                                             "linetype", "render")]
   
   if(is.null(data$area)){data$area <- 1}
   data$value <- data$area
@@ -128,9 +127,20 @@ compute_panel_circlepack_center <- function(data, scales){
     pull(area) %>%
     packcircles::circleProgressiveLayout(
       sizetype = 'area') %>%
-    cbind(data) 
-
+    cbind(data) ->
+  data
+  
+  if(!is.null(data$render)){
+    
+    data %>% 
+      filter(.data$render) ->
+    data
+    
+  }
+  
+  data
 }
+
 ```
 
 ### Step 1.1 test compute
@@ -147,6 +157,12 @@ filter(continent == "Americas") %>%
 gapminder::gapminder %>% 
   filter(year == 2002) %>% 
   select(id = continent) %>% 
+  compute_panel_circlepack_center()
+
+gapminder::gapminder %>% 
+  filter(year == 2002) %>% 
+  mutate( render = country == "Argentina") %>% 
+  select(id = continent, render) %>% 
   compute_panel_circlepack_center()
 
 ```
@@ -178,7 +194,6 @@ StatCirclepackcenter <- ggplot2::ggproto(`_class` = "StatCirclepackcenter",
 #' @export
 #'
 #' @examples
-#' # TBD
 geom_circlepack_text <- function(mapping = NULL, data = NULL,
                            position = "identity", na.rm = FALSE,
                            show.legend = NA,
@@ -207,6 +222,9 @@ filter(year == 2002) %>%
   geom_circlepack_text(alpha = .5) + 
   coord_equal() + 
   labs(title = "gapminder 2002 countries")
+
+last_plot() + 
+  aes(render = pop > 20000000)
 ```
 
 
@@ -228,7 +246,6 @@ filter(year == 2002) %>%
 #' @export
 #'
 #' @examples
-#' TBD
 compute_panel_circlepack <- function(data, scales, npoints = 50){
 
   data_mapped_aes_names <- names(data)[names(data) %in% c("id", "fill", "alpha", 
@@ -296,7 +313,6 @@ StatCirclepack <- ggplot2::ggproto(`_class` = "StatCirclepack",
 #' @export
 #'
 #' @examples
-#' # TBD
 geom_circlepack <- function(mapping = NULL, data = NULL,
                            position = "identity", na.rm = FALSE,
                            show.legend = NA,
@@ -384,6 +400,32 @@ last_plot() +
 
 last_plot() + 
   facet_wrap(~continent)
+
+
+gapminder::gapminder %>%
+filter(year == 2002) %>%
+  ggplot() +
+  aes(id = country) + 
+  geom_circlepack() +
+  geom_circlepack_text(alpha = .5) +
+  aes(area = pop) + 
+  coord_equal() + 
+  aes(fill = continent) + 
+  aes(render = pop > 20000000)
+
+# GeomTextRepel
+gapminder::gapminder %>%
+filter(year == 2002) %>%
+  ggplot() +
+  aes(id = country) + 
+  geom_circlepack() +
+  layer(geom = ggrepel::GeomTextRepel, 
+        stat = StatCirclepackcenter, 
+        position = "identity") +
+  aes(area = pop) + 
+  coord_equal() + 
+  aes(fill = continent) + 
+  aes(render = pop > 20000000)
 
 ```
 
