--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%", 
+  warning = F
 )
 ```
 
@@ -95,17 +96,9 @@ filter(year == 2002) %>%
 ### Step 1. compute panel
 
 ```{r compute_panel_circlepack_center}
-#' compute_panel_circlepack_center
-#'
-#' @return
-#' @export
-#'
-#' @examples
-compute_panel_circlepack_center <- function(data, scales, fun = sum){
-
-  # get aes names as they appear in the data
+compute_panel_aggregation <- function(data, scales, fun = sum){
   
-  if(is.null(data$slice)){data$slice <- TRUE}
+    if(is.null(data$slice)){data$slice <- TRUE}
 
   data %>% 
     dplyr::filter(.data$slice) ->
@@ -128,10 +121,6 @@ compute_panel_circlepack_center <- function(data, scales, fun = sum){
     summarize(area = fun(.data$area*.data$wt), .groups = 'drop') ->
   data
     
-  data %>%   
-    arrange(id)  -> # this doesn't feel very principled; motivation is when you go from no fill to color, preserves circle position...
-  data
-  
   if(is.null(data$within)){data$within <- 1}
 
   data %>%   
@@ -139,6 +128,27 @@ compute_panel_circlepack_center <- function(data, scales, fun = sum){
     mutate(prop = .data$area/sum(.data$area)) %>%
     mutate(percent = round(.data$prop*100)) -> 
   data
+  
+  data
+  
+}
+
+#' compute_panel_circlepack_center
+#'
+#' @return
+#' @export
+#'
+#' @examples
+compute_panel_circlepack_center <- function(data, scales, fun = sum){
+
+  # get aes names as they appear in the data
+  
+ data <- data |> compute_panel_aggregation(fun = fun) 
+  
+  
+  data %>%   
+    arrange(id)  -> # this doesn't feel very principled; motivation is when you go from no fill to color, preserves circle position...
+  data  
   
   data %>%
     pull(area) %>%
@@ -270,6 +280,9 @@ filter(year == 2002) %>%
 
 last_plot() + 
   aes(render = pop > 20000000)
+
+
+layer_data()
 ```
 
 
@@ -293,42 +306,12 @@ last_plot() +
 #' @examples
 compute_panel_circlepack <- function(data, scales, npoints = 50, fun = sum){
 
-  # get aes names as they appear in the data
-  
-  if(is.null(data$slice)){data$slice <- TRUE}
+  data <- data |> compute_panel_aggregation(scales, fun)
 
-  data %>% 
-    dplyr::filter(.data$slice) ->
-  data
-  
-  grp_cols <-  c("id", "fill", "alpha", 
-                 "colour", "group", "linewidth", "label", "size",
-                 "linetype", "render")
-  
-  # Thanks June! https://github.com/teunbrand/ggplot-extension-club/discussions/15
-  data %>% 
-    group_by(group_by(pick(any_of(grp_cols)))) ->   
-  data
-  
-  if(is.null(data$area)){data$area <- 1}
-  if(is.null(data$wt)){data$wt <- 1}
-  
-  data %>% 
-    summarize(area = fun(.data$area*.data$wt), .groups = 'drop') ->
-  data
-    
   data %>%   
     arrange(id)  -> # this doesn't feel very principled; motivation is when you go from no fill to color, preserves circle position...
   data
   
-  if(is.null(data$within)){data$within <- 1}
-
-  data %>%   
-    group_by(.data$within) %>% 
-    mutate(prop = .data$area/sum(.data$area)) %>%
-    mutate(percent = round(.data$prop*100)) -> 
-  data
-
   data$id = 1:nrow(data)
 
   data %>%
@@ -414,7 +397,6 @@ last_plot() +
 
 last_plot() +
   aes(area = pop) + 
-  geom_circlepack_text() + 
   labs(title = "with very different populations")
 
 last_plot() +
@@ -455,16 +437,13 @@ filter(year == 2002,
   aes(slice = continent == "Europe") +
   labs(title = "Percent of European Economy 2002") + 
   aes(fill = after_stat(area)) + 
-  ggnewscale::new_scale(new_aes = "size") + 
   geom_circlepack_text(vjust = 1.2, color = "grey65",
                        aes(label = paste(after_stat(percent),
                                          "percent"), 
                            size = stage(after_stat = area,
                                         after_scale = size*.85))) +
-  scale_size(range = c(.5, 3.5)) + 
   ggstamp::theme_void_fill("whitesmoke") +
-  theme(legend.position = "none") + 
-  coord_equal()
+  theme(legend.position = "none")
   
 pride_index <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2024/2024-06-11/pride_index.csv')
 
